INDEX MVP COMPLETE, Need final touches, swapping over to JS

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,15 @@ textarea
 
 }
 
+#allsongs
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
 footer
 {
     font-weight: bold;
