cleaning up HTML, fixing CSS for minor touch ups, added basic variables for ticketmaster API for js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,20 @@ html
     background-image: linear-gradient(to bottom right, rgb(204, 104, 243),rgb(29, 245, 227));
 }
 
+nav
+{
+
+    background: -webkit-linear-gradient(rgb(147, 20, 252), rgb(77, 52, 83)) !important;
+    font-weight: bold !important;
+    -webkit-background-clip: text;
+
+}
+
+
 .brand-logo 
 {
     font-size: 72px;
-    background-image: -webkit-linear-gradient(rgb(242, 239, 245), rgb(138, 208, 255));
+    background: -webkit-linear-gradient(rgb(147, 20, 252), rgb(77, 52, 83));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
