--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@ html
     background-image: linear-gradient(to bottom right, rgb(29, 245, 227),rgb(214, 109, 255) );
     min-height: 100%;
     font-family: sans-serif,'Times New Roman', Times, serif;
+    overflow-x: visible;
 }
 .nav-wrapper
 {
@@ -45,3 +46,21 @@ footer
 {
     font-weight: bold;
 }
+
+#sticky{
+    position: sticky;
+    top:0;
+    bottom:0;
+    left:0;
+}
+
+
+footer{
+    text-align: center;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;
+    background:hotpink;
+}
+
