--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,135 +1,161 @@
-html
-{
-    background-image: linear-gradient(to bottom right, rgb(25, 228, 211)40%,rgb(204, 104, 243)60%);
-    min-height: 100%;
-    font-family: sans-serif,'Times New Roman', Times, serif;
+html {
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(25, 228, 211) 40%,
+    rgb(204, 104, 243) 60%
+  );
+  min-height: 100%;
+  font-family: sans-serif, "Times New Roman", Times, serif;
 }
-.nav-wrapper
-{
-    background-image: linear-gradient(to bottom right, rgb(204, 104, 243),rgb(29, 245, 227));
-}
- 
-
-.homepage
-{
-    color: black;
-    font-weight: bold;
-    font-size: large;
+.nav-wrapper {
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(204, 104, 243),
+    rgb(29, 245, 227)
+  );
 }
 
-.whatever
-{
-    color: black;
-    font-weight: bold;
-    font-size: large;
+.homepage {
+  color: black;
+  font-weight: bold;
+  font-size: large;
 }
 
-.aboutme
-{
-    color: black;
-    font-weight: bold;
-    font-size: large;
+.whatever {
+  color: black;
+  font-weight: bold;
+  font-size: large;
 }
 
-.brand-logo 
-{
-    font-size: 72px;
-    background-image: -webkit-linear-gradient(rgb(242, 239, 245), rgb(138, 208, 255));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-weight: bold;
+.aboutme {
+  color: black;
+  font-weight: bold;
+  font-size: large;
 }
 
-button
-{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: center;
+.brand-logo {
+  font-size: 72px;
+  background-image: -webkit-linear-gradient(
+    rgb(242, 239, 245),
+    rgb(138, 208, 255)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
 }
 
-#header-text
-{
-    font-family:  "New Century Schoolbook";
-    text-shadow: 2px 2px 1px;
+button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
 }
 
-h1
-{
-    text-align: center;
+#header-text {
+  font-family: "New Century Schoolbook";
+  text-shadow: 2px 2px 1px;
 }
 
-.btn
-{
-    color: black;
-    font-weight: bold;
-    display: block;
-    justify-content: center;
+h1 {
+  text-align: center;
 }
 
-#generate
-{
-    background-color: hotpink;
+.btn {
+  color: black;
+  font-weight: bold;
+  display: block;
+  justify-content: center;
 }
 
-
-
-textarea 
-{
-    text-align: center;
-
+#generate {
+  background-color: hotpink;
 }
 
-label
-{
-    font-weight: bold !important;
-    color: black !important;
+textarea {
+  text-align: center;
 }
 
-
-#songsuggestion1
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+label {
+  font-weight: bold !important;
+  color: black !important;
 }
 
-#songvideo
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+#songsuggestion1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-#concertevent
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+#songvideo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-
-footer
-{
-    font-weight: bold;
+#concertevent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-#sticky{
-    position: sticky;
-    top:0;
-    bottom:0;
-    left:0;
+footer {
+  font-weight: bold;
 }
 
+#sticky {
+  position: sticky;
+  top: 0;
+  bottom: 0;
+  left: 0;
+}
 
-footer{
-    text-align: center;
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:60px;
-    background:hotpink;
+footer {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background: hotpink;
+}
+
+/* The Modal (background) */
+.artist-modal,
+.song-title-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
