--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,15 @@
 html {
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(25, 228, 211) 40%,
-    rgb(204, 104, 243) 60%
-  );
+  background:url(../images/backgroud.PNG);/*Added this to change background, can edit with this*/
+  background-repeat: no-repeat; /*Added this to change background, can edit with this*/
+  background-size: 2560px 1762px;/*Added this to change background, can edit with this*/
   min-height: 100%;
   font-family: sans-serif, "Times New Roman", Times, serif;
 }
-.nav-wrapper {
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(204, 104, 243),
-    rgb(29, 245, 227)
-  );
-}
 
-.homepage {
-  color: black;
-  font-weight: bold;
-  font-size: large;
-}
-
-.whatever {
-  color: black;
-  font-weight: bold;
-  font-size: large;
+nav{
+    background-color: transparent;
+    border-bottom: none !important;
+    box-shadow: none !important;
 }
 
 .aboutme {
@@ -34,14 +19,14 @@ html {
 }
 
 .brand-logo {
-  font-size: 72px;
+  /*font-size: 75px;*/
   background-image: -webkit-linear-gradient(
     rgb(242, 239, 245),
     rgb(138, 208, 255)
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 button {
@@ -49,15 +34,8 @@ button {
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
-}
+  background:url(../images/backgroud.PNG); /*Added this to change button color, can edit with this*/
 
-#header-text {
-  font-family: "New Century Schoolbook";
-  text-shadow: 2px 2px 1px;
-}
-
-h1 {
-  text-align: center;
 }
 
 .btn {
@@ -65,7 +43,10 @@ h1 {
   font-weight: bold;
   display: block;
   justify-content: center;
+  background:url(../images/backgroud.PNG);/*Added this to change background, can edit with this*/
+
 }
+
 
 #generate {
   background-color: hotpink;
@@ -75,17 +56,32 @@ textarea {
   text-align: center;
 }
 
+.materialize-input{
+    border-bottom: solid rgb(255, 243, 233) !important;
+    box-shadow: 0px 1px 0px 0px white !important;
+}
+
+.materialize-textarea{
+    border-bottom: solid rgb(255, 243, 233) !important;
+    box-shadow: 0px 1px 0px 0px white !important;
+}
+
 label {
   font-weight: bold !important;
   color: black !important;
+  
 }
 
-#songsuggestion1 {
+
+#displayinfo {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-weight: bold;
+
 }
+
 
 #concertevent, #concertdate, #concertname, #venuename, #concerturl
 {
@@ -94,6 +90,10 @@ label {
     align-items: center;
     justify-content: center;
     font-weight: bold;
+}
+
+#concerturl {
+    color: blue;
 }
 
 #songvideo 
@@ -107,10 +107,10 @@ label {
 
 footer{
     text-align: center;
-    position:relative;
-    bottom:100;
+    position:absolute;
+    bottom:0%;
     width:100%;
     height:60px;
-    background:hotpink;
+    font-weight: bold;
 }
 
