--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,17 @@
 html {
+  
   background:url(../images/backgroud.PNG);/*Added this to change background, can edit with this*/
   background-repeat: no-repeat; /*Added this to change background, can edit with this*/
   background-size: 2560px 1762px;/*Added this to change background, can edit with this*/
   min-height: 100%;
   font-family: sans-serif, "Times New Roman", Times, serif;
+  position: relative;
+  padding-bottom: 50px;
 }
 
+body{
+  height: 100%;
+}
 nav{
     background-color: transparent;
     border-bottom: none !important;
@@ -16,10 +22,13 @@ nav{
   color: black;
   font-weight: bold;
   font-size: large;
+  background-color: peachpuff;
+  border-radius: 10px;
 }
 
 .brand-logo {
-  /*font-size: 75px;*/
+  font-size: 75px !important;
+  margin-top: 10px;
   background-image: -webkit-linear-gradient(
     rgb(242, 239, 245),
     rgb(138, 208, 255)
@@ -34,7 +43,16 @@ button {
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
-  background:url(../images/backgroud.PNG); /*Added this to change button color, can edit with this*/
+  background-color: peachpuff;
+  
+}
+
+.btn:hover{
+  background-color: rgb(241, 161, 91);
+}
+
+button:hover{
+  background-color: rgb(241, 161, 91);
 
 }
 
@@ -43,7 +61,9 @@ button {
   font-weight: bold;
   display: block;
   justify-content: center;
-  background:url(../images/backgroud.PNG);/*Added this to change background, can edit with this*/
+  color: black;
+  background-color: peachpuff;
+
 
 }
 
@@ -64,6 +84,10 @@ textarea {
 .materialize-textarea{
     border-bottom: solid rgb(255, 243, 233) !important;
     box-shadow: 0px 1px 0px 0px white !important;
+}
+
+#historybutton{
+  background-color: peachpuff;
 }
 
 label {
@@ -108,9 +132,9 @@ label {
 footer{
     text-align: center;
     position:absolute;
-    bottom:0%;
+    bottom:0;
+    height: 50px;
     width:100%;
-    height:60px;
     font-weight: bold;
 }
 
