--- a/assets/githubindex.css
+++ b/assets/githubindex.css
@@ -1,9 +1,14 @@
+html{
+    background:url("./images/backgroud.PNG");/*Added this to change background, can edit with this*/
+    background-repeat: no-repeat; /*Added this to change background, can edit with this*/
+    background-size: 2560px 1762px;/*Added this to change background, can edit with this*/
+
+}
 
 body{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
     margin-right: -20%;
-    background-image: linear-gradient(to bottom right, rgb(204, 104, 243),rgb(29, 245, 227));
 
  
 }
