--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,10 @@ body{
 
 nav {
     background-color: transparent;
-    
+    border-bottom: none !important;
     box-shadow: none !important;
-    margin-bottom: 20px;
+    margin-bottom: 140px;
     margin-top: 20px;
-    height: 150px;
 }
 
 .aboutme {
@@ -29,6 +28,7 @@ nav {
   font-size: large;
   background-color: peachpuff;
   border-radius: 10px;
+  margin-right: 20px;
 }
 
 #brand-logo {
@@ -48,6 +48,7 @@ button {
   margin-right: auto;
   justify-content: center;
   background-color: peachpuff;
+  text-align: center;
   
 }
 
@@ -67,15 +68,8 @@ button:hover{
   justify-content: center;
   color: black;
   background-color: peachpuff;
-  font-size: 1rem;
-
 }
 
-
-/* Noted this out because it is an old ID that no longer exists
- #generate {
-  background-color: hotpink;
-} */
 
 textarea {
   text-align: center;
@@ -91,9 +85,6 @@ textarea {
     box-shadow: 0px 1px 0px 0px white !important;
 }
 
-#historybutton{
-  background-color: peachpuff;
-}
 
 label {
   font-weight: bold !important;
@@ -103,14 +94,8 @@ label {
 
 
 #displayinfo {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; */
   font-weight: bold;
 }
-
-
 
 
 #concertevent, #concertdate, #concertname, #venuename, #concerturl
@@ -128,9 +113,9 @@ label {
 
 #lastFMInfo {
   list-style: none;
-  font-size: 30px;
-  text-align: right;
-  border: black;
+  font-size: 25px;
+  text-align: left;
+  box-shadow: none !important;
 }
 
 #songvideo 
@@ -149,12 +134,4 @@ footer{
     height: 50px;
     width:100%;
     font-weight: bold;
-}
-
-@media screen and (min-width: 0) {
-  .materialize-input{
-    display: flex;
-    flex-direction: wrap;
-  }
-
 }
