--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ nav {
     background-color: transparent;
     border-bottom: none !important;
     box-shadow: none !important;
-    margin-bottom: 140px;
+    margin-bottom: 3in;
     margin-top: 20px;
 }
 
@@ -108,12 +108,13 @@ label {
 }
 
 #concerturl {
-    color: blue;
+    color: magenta;
+    text-align: center;
 }
 
 #lastFMInfo {
   list-style: none;
-  font-size: 25px;
+  font-size: 22px;
   text-align: left;
   box-shadow: none !important;
 }
