--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ label {
 #lastFMInfo {
   list-style: none;
   font-size: 22px;
-  text-align: left;
+  text-align: center;
   box-shadow: none !important;
 }
 
