--- a/assets/githubindex.css
+++ b/assets/githubindex.css
@@ -8,16 +8,9 @@ html{
 body{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
-    margin-right: -20%;
-
+    align-items: center;
  
 }
-
-
-h1{
-    margin-right: 16%;
-}
-
 
 p,span{
     font-weight: 500;
